Improve multi-stage Python example for #309

--- a/examples/python3/Dockerfile
+++ b/examples/python3/Dockerfile
@@ -1,8 +1,28 @@
-FROM python:3-slim AS build-env
+FROM python:3-slim AS bytecompile
+
+# Using standard Python image
+#  Add in the application code
+#  Byte-compile Python code to *.pyc
+
 ADD . /app
 WORKDIR /app
+RUN python -m compileall .
 
-FROM gcr.io/distroless/python3
-COPY --from=build-env /app /app
+# Copy the results into the distroless image.
+
+FROM gcr.io/distroless/python3 AS compiled
+COPY --from=bytecompile /app /app
 WORKDIR /app
 CMD ["hello.py", "/etc"]
+
+FROM python:3-slim AS pip
+ADD . /app
+WORKDIR /app
+RUN pip3 install -r requirements.txt -t /app
+RUN python -m compileall .
+
+FROM gcr.io/distroless/python3 AS withrequirements
+COPY --from=pip /app /app
+WORKDIR /app
+CMD ["hello.py", "/etc"]
+
