--- a/examples/python2.7/Dockerfile
+++ b/examples/python2.7/Dockerfile
@@ -1,8 +1,45 @@
 FROM python:2.7-slim AS build-env
+
+# Using standard Python image
+#  Add in the application code
+#  Byte-compile Python code to *.pyc
+
 ADD . /app
 WORKDIR /app
+RUN python -m compileall .
+
+# Copy the results into the distroless image.
 
 FROM gcr.io/distroless/python2.7
 COPY --from=build-env /app /app
 WORKDIR /app
 CMD ["hello.py", "/etc"]
+
+FROM python:2.7-slim AS bytecompile
+
+# Using standard Python image
+#  Add in the application code
+#  Byte-compile Python code to *.pyc
+
+ADD . /app
+WORKDIR /app
+RUN python -m compileall .
+
+# Copy the results into the distroless image.
+
+FROM gcr.io/distroless/python2.7 AS compiled
+COPY --from=bytecompile /app /app
+WORKDIR /app
+CMD ["hello.py", "/etc"]
+
+FROM python:2.7-slim AS pip
+ADD . /app
+WORKDIR /app
+RUN pip install -r requirements.txt -t /app
+RUN python -m compileall .
+
+FROM gcr.io/distroless/python2.7 AS withrequirements
+COPY --from=pip /app /app
+WORKDIR /app
+CMD ["hello.py", "/etc"]
+
