Add group `tty` too for /dev/console and /dev/pts

--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -37,4 +37,4 @@ fileContentTests:
   expectedContents: ['^root:x:0:0:user:/home:/bin/bash\n$']
 - name: 'known groups'
   path: '/etc/group'
-  expectedContents: ['^root:x:0:\nstaff:x:50:\n$']
+  expectedContents: ['^root:x:0:\ntty:x:5:\nstaff:x:50:\n$']
