Add group entries for `staff` and `tty` (#315)

--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -10,6 +10,9 @@ fileExistenceTests:
 - name: passwd
   path: '/etc/passwd'
   shouldExist: true
+- name: group
+  path: '/etc/group'
+  shouldExist: true
 - name: etc-os-release
   path: '/etc/os-release'
   shouldExist: true
@@ -28,3 +31,10 @@ fileExistenceTests:
 - name: homedir
   path: '/home'
   shouldExist: true
+fileContentTests:
+- name: 'known users'
+  path: '/etc/passwd'
+  expectedContents: ['^root:x:0:0:user:/home:/bin/bash\n$']
+- name: 'known groups'
+  path: '/etc/group'
+  expectedContents: ['^root:x:0:\ntty:x:5:\nstaff:x:50:\n$']
