--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -29,12 +29,12 @@ fileExistenceTests:
   path: '/usr/sbin/tzconfig'
   shouldExist: true
 - name: homedir
-  path: '/home'
+  path: '/root'
   shouldExist: true
 fileContentTests:
 - name: 'known users'
   path: '/etc/passwd'
-  expectedContents: ['^root:x:0:0:user:/home:/bin/bash\nnobody:x:65534:65534:user:/home:/bin/bash\n$']
+  expectedContents: ['^root:x:0:0:user:/root:/sbin/nologin\nnobody:x:65534:65534:user:/home/nobody:/sbin/nologin\n$']
 - name: 'known groups'
   path: '/etc/group'
   expectedContents: ['^root:x:0:\nnobody:x:65534:\ntty:x:5:\nstaff:x:50:\n$']
