/nonexistent as nobody's home

--- a/base/BUILD
+++ b/base/BUILD
@@ -12,6 +12,7 @@ passwd_entry(
     name = "root_user",
     gid = 0,
     home = "/home",
+    info = "root",
     shell = "/sbin/nologin",
     uid = 0,
     username = "root",
@@ -19,10 +20,10 @@ passwd_entry(
 
 passwd_entry(
     name = "nobody_user",
+    create_home = False,
     gid = 65534,
-    # TODO: change it to /nonexistent and make sure it does not exist.
-    # https://github.com/GoogleContainerTools/distroless/issues/337
-    home = "/usr/local/home/nobody",
+    home = "/nonexistent",
+    info = "nobody",
     shell = "/sbin/nologin",
     uid = 65534,
     username = "nobody",
@@ -132,7 +133,7 @@ container_image(
     base = ":base",
     directory = "/",
     entrypoint = ["/busybox/sh"],
-    env = {"PATH": "$PATH:/busybox"},
+    env = {"PATH": "$$PATH:/busybox"},
     tars = ["//experimental/busybox:busybox.tar"],
 )
 
