--- a/base/testdata/base.yaml
+++ b/base/testdata/base.yaml
@@ -29,12 +29,15 @@ fileExistenceTests:
   path: '/usr/sbin/tzconfig'
   shouldExist: true
 - name: homedir
-  path: '/home'
+  path: '/root'
+  shouldExist: true
+- name: nonroot-homedir
+  path: '/home/nonroot'
   shouldExist: true
 fileContentTests:
 - name: 'known users'
   path: '/etc/passwd'
-  expectedContents: ['^root:x:0:0:root:/home:/sbin/nologin\nnobody:x:65534:65534:nobody:/nonexistent:/sbin/nologin\n$']
+  expectedContents: ['^root:x:0:0:root:/root:/sbin/nologin\nnobody:x:65534:65534:nobody:/nonexistent:/sbin/nologin\nnonroot:x:65532:65532:nonroot:/home/nonroot:/sbin/nologin\n$']
 - name: 'known groups'
   path: '/etc/group'
-  expectedContents: ['^root:x:0:\nnobody:x:65534:\ntty:x:5:\nstaff:x:50:\n$']
+  expectedContents: ['^root:x:0:\nnobody:x:65534:\ntty:x:5:\nstaff:x:50:\nnonroot:x:65532:\n$']
