fix some container_tests on darwin

--- a/base/BUILD
+++ b/base/BUILD
@@ -152,6 +152,8 @@ container_test(
 go_binary(
     name = "check_certs",
     srcs = ["testdata/check_certs.go"],
+    # Test image is linux based
+    goos = "linux",
     pure = "on",
 )
 
