Make busybox package public
Was experimenting creating a different distribution (ie. ubuntu) and realized in order to have debug images we need this package to be public

--- a/experimental/busybox/BUILD
+++ b/experimental/busybox/BUILD
@@ -1,4 +1,4 @@
-package(default_visibility = ["//base:__subpackages__"])
+package(default_visibility = ["//visibility:public"])
 
 load("@io_bazel_rules_docker//contrib:test.bzl", "container_test")
 load(":commands.bzl", "BUSYBOX_COMMANDS")
