--- a/java/jetty/testdata/java11_debug.yaml
+++ b/java/jetty/testdata/java11_debug.yaml
@@ -17,8 +17,8 @@ fileExistenceTests:
     path: "/etc/ssl/certs/java/cacerts"
     shouldExist: true
   - name: busybox
-    path: "/busybox/sh"
+    path: "/bin/busybox"
     shouldExist: true
-  - name: no-shell
+  - name: shell
     path: "/bin/sh"
-    shouldExist: false
+    shouldExist: true
