--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,130 +3,130 @@ steps:
 
 # Publishing base, cc, and static as latest is handled in a separate release process
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:static']
+  args: ['run', '--host_force_python=PY2', '//base:static']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:static', 'gcr.io/$PROJECT_ID/static:${COMMIT_SHA}']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:static-nonroot']
+  args: ['run', '--host_force_python=PY2', '//base:static-nonroot']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:static-nonroot', 'gcr.io/$PROJECT_ID/static:nonroot']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:base']
+  args: ['run', '--host_force_python=PY2', '//base:base']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:base', 'gcr.io/$PROJECT_ID/base:${COMMIT_SHA}']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:base-nonroot']
+  args: ['run', '--host_force_python=PY2', '//base:base-nonroot']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:base-nonroot', 'gcr.io/$PROJECT_ID/base:nonroot']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:debug']
+  args: ['run', '--host_force_python=PY2', '//base:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:debug', 'gcr.io/$PROJECT_ID/base:debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//base:debug-nonroot']
+  args: ['run', '--host_force_python=PY2', '//base:debug-nonroot']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/base:debug-nonroot', 'gcr.io/$PROJECT_ID/base:debug-nonroot']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//cc']
+  args: ['run', '--host_force_python=PY2', '//cc']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/cc:cc', 'gcr.io/$PROJECT_ID/cc:${COMMIT_SHA}']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//cc:debug']
+  args: ['run', '--host_force_python=PY2', '//cc:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/cc:debug', 'gcr.io/$PROJECT_ID/cc:debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java:java8']
+  args: ['run', '--host_force_python=PY2', '//java:java8']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:latest']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8', 'gcr.io/$PROJECT_ID/java:8']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java:java8_debug']
+  args: ['run', '--host_force_python=PY2', '//java:java8_debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8_debug', 'gcr.io/$PROJECT_ID/java:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java8_debug', 'gcr.io/$PROJECT_ID/java:8-debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java:java11']
+  args: ['run', '--host_force_python=PY2', '//java:java11']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java11', 'gcr.io/$PROJECT_ID/java:11']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java:java11_debug']
+  args: ['run', '--host_force_python=PY2', '//java:java11_debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java:java11_debug', 'gcr.io/$PROJECT_ID/java:11-debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java/jetty:jetty_java8']
+  args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java8']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java8', 'gcr.io/$PROJECT_ID/java/jetty:latest']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java8', 'gcr.io/$PROJECT_ID/java/jetty:java8']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java/jetty:jetty_java8_debug']
+  args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java8_debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java8_debug', 'gcr.io/$PROJECT_ID/java/jetty:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java8_debug', 'gcr.io/$PROJECT_ID/java/jetty:java8-debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java/jetty:jetty_java11']
+  args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java11']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java11', 'gcr.io/$PROJECT_ID/java/jetty:java11']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//java/jetty:jetty_java11_debug']
+  args: ['run', '--host_force_python=PY2', '//java/jetty:jetty_java11_debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/java/jetty:jetty_java11_debug', 'gcr.io/$PROJECT_ID/java/jetty:java11-debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/python3:python3']
+  args: ['run', '--host_force_python=PY2', '//experimental/python3:python3']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/python3:python3', 'gcr.io/$PROJECT_ID/python3:latest']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/python3:debug']
+  args: ['run', '--host_force_python=PY2', '//experimental/python3:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/python3:debug', 'gcr.io/$PROJECT_ID/python3:debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/python2.7:python27']
+  args: ['run', '--host_force_python=PY2', '//experimental/python2.7:python27']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/python2.7:python27', 'gcr.io/$PROJECT_ID/python2.7:latest']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/python2.7:debug']
+  args: ['run', '--host_force_python=PY2', '//experimental/python2.7:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/python2.7:debug', 'gcr.io/$PROJECT_ID/python2.7:debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/nodejs']
+  args: ['run', '--host_force_python=PY2', '//experimental/nodejs']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/nodejs:nodejs', 'gcr.io/$PROJECT_ID/nodejs:latest']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/nodejs:debug']
+  args: ['run', '--host_force_python=PY2', '//experimental/nodejs:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/nodejs:debug', 'gcr.io/$PROJECT_ID/nodejs:debug']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/dotnet']
+  args: ['run', '--host_force_python=PY2', '//experimental/dotnet']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/dotnet:dotnet', 'gcr.io/$PROJECT_ID/dotnet:latest']
 
 - name: gcr.io/cloud-builders/bazel
-  args: ['run', '//experimental/dotnet:debug']
+  args: ['run', '--host_force_python=PY2', '//experimental/dotnet:debug']
 - name: gcr.io/cloud-builders/docker
   args: ['tag', 'bazel/experimental/dotnet:debug', 'gcr.io/$PROJECT_ID/dotnet:debug']
 
