feat(go): add go module examples + refactor Dockerfile

--- a/examples/go/Dockerfile
+++ b/examples/go/Dockerfile
@@ -1,12 +1,28 @@
-FROM golang:1.12 as build-env
+# our builder image
+FROM golang:1.13.1-alpine AS builder
 
+# default app directory
 WORKDIR /go/src/app
+
+# copy-in our module info
+COPY go.mod go.sum /go/src/app/
+RUN go mod download
+
+# add our binary sources
 ADD . /go/src/app
 
-RUN go get -d -v ./...
+# build our binary
+RUN CGO_ENABLED=0 go build -a -installsuffix cgo -o /go/bin/app
 
-RUN go build -o /go/bin/app
+# ---
 
 FROM gcr.io/distroless/base
-COPY --from=build-env /go/bin/app /
+
+# copy our built binary
+COPY --from=builder --chown=nonroot /go/bin/app /app
+
+# run as unprivileged user
+USER nonroot
+
+ # command / entrypoint of container
 CMD ["/app"]
