--- a/java/jetty/testdata/java11_debug.yaml
+++ b/java/jetty/testdata/java11_debug.yaml
@@ -12,6 +12,10 @@ commandTests:
     command: "/usr/bin/java"
     args: ["-version"]
     expectedError: ['openjdk version "11\.*']
+  - name: javac
+    command: "/usr/lib/jvm/java-11-openjdk-amd64/bin/javac"
+    args: ["-version"]
+    expectedOutput: ['javac 11\.*']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
