--- a/java/testdata/java8_debug.yaml
+++ b/java/testdata/java8_debug.yaml
@@ -8,6 +8,10 @@ commandTests:
     command: "/usr/bin/java"
     args: ["-version"]
     expectedError: ['openjdk version "1\.8.*"']
+  - name: javac
+    command: "/usr/lib/jvm/java-8-openjdk-amd64/bin/javac"
+    args: ["-version"]
+    expectedError: ['javac 1\.8.*']
 fileExistenceTests:
   - name: certs
     path: "/etc/ssl/certs/java/cacerts"
