Deterministically build java cacerts (#372)
* Deterministically build java cacerts

  Currently the java keystore is built by running apt-get install inside
  of a docker container and copying the results out. This is
  non-deterministic and requries the build system to have a working
  docker install. This patch instead parses the PEM files at build time
  and converts it in to a java keystore.

--- a/java/BUILD
+++ b/java/BUILD
@@ -20,9 +20,13 @@ DISTRO_VERSIONS = {
     "_debian10": versions_debian10,
 }
 
-cacerts_java(
-    name = "cacerts_java",
-)
+[cacerts_java(
+    name = "cacerts_java" + distro_suffix,
+    cacerts_tar = "//base:cacerts" + distro_suffix + ".tar",
+) for distro_suffix in [
+    "_debian9",
+    "_debian10",
+]]
 
 [container_image(
     name = rule_name + distro_suffix,
@@ -50,7 +54,7 @@ cacerts_java(
     symlinks = {
         "/usr/bin/java": java_executable_path,
     },
-    tars = [":cacerts_java"],
+    tars = [":cacerts_java" + distro_suffix],
 ) for (distro_suffix, rule_name, java_debs, java_executable_path) in [
     (
         "_debian9",
