Moved bazel rules

--- a/examples/BUILD
+++ b/examples/BUILD
@@ -1,1 +1,5 @@
 package(default_visibility = ["//visibility:public"])
+
+load("@io_bazel_rules_rust//:workspace.bzl", "bazel_version")
+
+bazel_version(name = "bazel_version")
