dotnet: Add _debian9 and _debian10 variants (#429)
* dotnet: Add _debian9 and _debian10 variants

These targets have zero tests, so this was not tested other than
ensuring the main command can start:

$ docker run -ti --rm bazel/experimental/dotnet:dotnet_debian10 /opt/dotnet/dotnet --info

Microsoft .NET Core Shared Framework Host

  Version  : 2.0.0
  Build    : e8b8861ac7faf042c87a5c2f9f2d04c98b69f28d

Someone who actually uses dotnet will need to check that this works.

* Fix broken builds and publish

* minor fixes

Co-authored-by: Evan Jones <evan.jones@bluecore.com>
Co-authored-by: Chanseok Oh <chanseok@google.com>

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -145,8 +145,10 @@ steps:
     bazel run --host_force_python=PY2 //experimental/nodejs
     bazel run --host_force_python=PY2 //experimental/nodejs:debug
 
-    bazel run --host_force_python=PY2 //experimental/dotnet
-    bazel run --host_force_python=PY2 //experimental/dotnet:debug
+    bazel run --host_force_python=PY2 //experimental/dotnet:dotnet_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet:debug_debian9
+    bazel run --host_force_python=PY2 //experimental/dotnet:dotnet_debian10
+    bazel run --host_force_python=PY2 //experimental/dotnet:debug_debian10
 - name: gcr.io/cloud-builders/docker
   entrypoint: sh
   args:
@@ -172,8 +174,12 @@ steps:
     docker tag bazel/experimental/nodejs:nodejs gcr.io/$PROJECT_ID/nodejs:latest
     docker tag bazel/experimental/nodejs:debug  gcr.io/$PROJECT_ID/nodejs:debug
 
-    docker tag bazel/experimental/dotnet:dotnet gcr.io/$PROJECT_ID/dotnet:latest
-    docker tag bazel/experimental/dotnet:debug  gcr.io/$PROJECT_ID/dotnet:debug
+    docker tag bazel/experimental/dotnet:dotnet_debian9  gcr.io/$PROJECT_ID/dotnet:latest
+    docker tag bazel/experimental/dotnet:dotnet_debian9  gcr.io/$PROJECT_ID/dotnet-debian9:latest
+    docker tag bazel/experimental/dotnet:dotnet_debian10 gcr.io/$PROJECT_ID/dotnet-debian10:latest
+    docker tag bazel/experimental/dotnet:debug_debian9   gcr.io/$PROJECT_ID/dotnet:debug
+    docker tag bazel/experimental/dotnet:debug_debian9   gcr.io/$PROJECT_ID/dotnet-debian9:debug
+    docker tag bazel/experimental/dotnet:debug_debian10  gcr.io/$PROJECT_ID/dotnet-debian10:debug
 
 
 images:
@@ -249,3 +255,7 @@ images:
   - 'gcr.io/$PROJECT_ID/nodejs:debug'
   - 'gcr.io/$PROJECT_ID/dotnet:latest'
   - 'gcr.io/$PROJECT_ID/dotnet:debug'
+  - 'gcr.io/$PROJECT_ID/dotnet-debian9:latest'
+  - 'gcr.io/$PROJECT_ID/dotnet-debian9:debug'
+  - 'gcr.io/$PROJECT_ID/dotnet-debian10:latest'
+  - 'gcr.io/$PROJECT_ID/dotnet-debian10:debug'
